ir-dump: fix PhiInst && MemInitInst
修复因前端接口更新产生的错误